# pjs-tools

./: .containerignore  .env  .env.container  .env.example  .gitignore  Containerfile  Installation_guide.md  README.md  app.py  podman-compose.yml  pyproject.toml
docs/: Deployment.md  Installation Guide.md  MCP.md  NVIDIA Notes.md  Neo4j.md  OLLAMA.md  OPEN-WEBUI-INTEGRATION.md  OPEN-WEBUI.md  PODMAN.md  Podman Installation.md  QUICKSTART.md  Troubleshooting.md  Welcome to Local AI with Neo4j DB RAG.md
docs/.obsidian/: workspace.json
docs/.obsidian/.obsidian/: workspace.json
scripts/: build.sh  compose.sh  load-files-container.sh  load-files.sh  run.sh
src/pjs_neo_rag/: __init__.py  ai_providers.py  config.py  create_neo_indexes.py  embeddings.py  ingest_files.py  ingest_pdf.py  lmstudio.py  neo4j_connection.py  neo4j_retriever_api.py  neo_search.py  ollama.py  vllm.py
tests/: test_cypher_direct.py  test_cypher_queries.py  test_neo4j_connection.py  test_search.py
